# recepie-app-api

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
